--- a/devdivdev/template/index.html
+++ b/devdivdev/template/index.html
@@ -1,77 +1,148 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <title>Resume</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link
+            rel="stylesheet"
+            href="https://use.fontawesome.com/releases/v5.1.0/css/all.css"
+            integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt"
+            crossorigin="anonymous"
+        />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css"
+        />
 
-<head>
-  <meta charset="UTF-8">
-  <title>Resume</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+        <link rel="stylesheet" href="css/style.css" />
+    </head>
 
-  
-      <link rel="stylesheet" href="css/style.css">
-
-  
-</head>
-
-<body>
-
-  <div class="resume">
-  <div class="base">
-    <div class="profile">
-      <div class="photo">
-        <!--<img src="" /> -->
-        <i class="fas fa-rocket"></i>
-      </div>
-      <div class="info">
-        <h1 class="name">Naomi Weatherford</h1>
-        <h2 class="job">Frontend Web Designer</h2>
-      </div>
-    </div>
-    <div class="about">
-      <h3>About Me</h3>I'm a web designer for Fiserv, specializing in web design, graphic design, and UX. Experienced with the Adobe Creative Suite, responsive design, social media management, and prototyping.
-    </div>
-    <div class="contact">
-      <h3>Contact Me</h3>
-      <div class="call"><a href="tel:123-456-7890"><i class="fas fa-phone"></i><span>123-456-7890</span></a></div>
-      <div class="address"><a href="https://goo.gl/maps/fiTBGT6Vnhy"><i class="fas fa-map-marker"></i><span>Provo, Utah</span></a>
-      </div>
-      <div class="email"><a href="mailto:astronaomical@gmail.com"><i class="fas fa-envelope"></i><span>astronaomical</span></a></div>
-      <div class="website"><a href="http://astronaomical.com/" target="_blank"> <i class="fas fa-home"></i><span>astronaomical.com</span></a></div>
-    </div>
-    <div class="follow">
-      <h3>Follow Me</h3>
-      <div class="box">
-        <a href="https://www.facebook.com/astronaomical/" target="_blank"><i class="fab fa-facebook"></i></a>
-        <a href="https://www.instagram.com/astronaomical/" target="_blank"><i class="fab fa-instagram "></i></a>
-        <a href="https://www.pinterest.com/astronaomical/" target="_blank"><i class="fab fa-pinterest"></i></a>
-        <a href="https://www.linkedin.com/in/naomi-weatherford-758385112/" target="_blank"><i class="fab fa-linkedin"></i></a>
-        <a href="https://codepen.io/astronaomical/" target="_blank"><i class="fab fa-codepen"></i></a>
-        <a href="https://www.behance.net/astronaomical" target="_blank"><i class="fab fa-behance"></i></a>
-      </div>
-    </div>
-  </div>
-  <div class="func">
-    <div class="work">
-      <h3><i class="fa fa-briefcase"></i>Experience</h3>
-      <ul>
-        <li><span>Technical Consultant -<br>Web Design</span><small>Fiserv</small><small>Apr 2018 - Now</small></li>
-        <li><span>Web Designer</span><small>Lynden</small><small>Jan 2018 - Apr 2018</small></li>
-        <li><span>Intern - Web Design</span><small>Lynden</small><small>Aug 2017 - Dec 2017</small></li>
-      </ul>
-    </div>
-    <div class="edu">
-      <h3><i class="fa fa-graduation-cap"></i>Education</h3>
-      <ul>
-        <li><span>Bachelor of Science<br>Web Design and Development</span><small>BYU-Idaho</small><small>Jan. 2016 - Apr. 2018</small></li>
-        <li><span>Computer Science</span><small>Edmonds Community College</small><small>Sept. 2014 - Dec. 2015</small></li>
-        <li><span>High School</span><small>Henry M. Jackson High School</small><small>Jan. 2013 - Jun. 2015</small></li>
-      </ul>
-    </div>
-    <div class="skills-prog">
-
-    </div>
-    <!--
+    <body>
+        <div class="resume">
+            <div class="base">
+                <div class="profile">
+                    <div class="photo">
+                        <!--<img src="" /> -->
+                        <i class="fas fa-rocket"></i>
+                    </div>
+                    <div class="info">
+                        <h1 class="name">Naomi Weatherford</h1>
+                        <h2 class="job">Frontend Web Designer</h2>
+                    </div>
+                </div>
+                <div class="about">
+                    <h3>About Me</h3>
+                    I'm a web designer for Fiserv, specializing in web design,
+                    graphic design, and UX. Experienced with the Adobe Creative
+                    Suite, responsive design, social media management, and
+                    prototyping.
+                </div>
+                <div class="contact">
+                    <h3>Contact Me</h3>
+                    <div class="call">
+                        <a href="tel:123-456-7890"
+                            ><i class="fas fa-phone"></i
+                            ><span>123-456-7890</span></a
+                        >
+                    </div>
+                    <div class="address">
+                        <a href="https://goo.gl/maps/fiTBGT6Vnhy"
+                            ><i class="fas fa-map-marker"></i
+                            ><span>Provo, Utah</span></a
+                        >
+                    </div>
+                    <div class="email">
+                        <a href="mailto:astronaomical@gmail.com"
+                            ><i class="fas fa-envelope"></i
+                            ><span>astronaomical</span></a
+                        >
+                    </div>
+                    <div class="website">
+                        <a href="http://astronaomical.com/" target="_blank">
+                            <i class="fas fa-home"></i
+                            ><span>astronaomical.com</span></a
+                        >
+                    </div>
+                </div>
+                <div class="follow">
+                    <h3>Follow Me</h3>
+                    <div class="box">
+                        <a
+                            href="https://www.facebook.com/astronaomical/"
+                            target="_blank"
+                            ><i class="fab fa-facebook"></i
+                        ></a>
+                        <a
+                            href="https://www.instagram.com/astronaomical/"
+                            target="_blank"
+                            ><i class="fab fa-instagram "></i
+                        ></a>
+                        <a
+                            href="https://www.pinterest.com/astronaomical/"
+                            target="_blank"
+                            ><i class="fab fa-pinterest"></i
+                        ></a>
+                        <a
+                            href="https://www.linkedin.com/in/naomi-weatherford-758385112/"
+                            target="_blank"
+                            ><i class="fab fa-linkedin"></i
+                        ></a>
+                        <a
+                            href="https://codepen.io/astronaomical/"
+                            target="_blank"
+                            ><i class="fab fa-codepen"></i
+                        ></a>
+                        <a
+                            href="https://www.behance.net/astronaomical"
+                            target="_blank"
+                            ><i class="fab fa-behance"></i
+                        ></a>
+                    </div>
+                </div>
+            </div>
+            <div class="func">
+                <div class="work">
+                    <h3><i class="fa fa-briefcase"></i>Experience</h3>
+                    <ul>
+                        <li>
+                            <span>Technical Consultant -<br />Web Design</span
+                            ><small>Fiserv</small><small>Apr 2018 - Now</small>
+                        </li>
+                        <li>
+                            <span>Web Designer</span><small>Lynden</small
+                            ><small>Jan 2018 - Apr 2018</small>
+                        </li>
+                        <li>
+                            <span>Intern - Web Design</span><small>Lynden</small
+                            ><small>Aug 2017 - Dec 2017</small>
+                        </li>
+                    </ul>
+                </div>
+                <div class="edu">
+                    <h3><i class="fa fa-graduation-cap"></i>Education</h3>
+                    <ul>
+                        <li>
+                            <span
+                                >Bachelor of Science<br />Web Design and
+                                Development</span
+                            ><small>BYU-Idaho</small
+                            ><small>Jan. 2016 - Apr. 2018</small>
+                        </li>
+                        <li>
+                            <span>Computer Science</span
+                            ><small>Edmonds Community College</small
+                            ><small>Sept. 2014 - Dec. 2015</small>
+                        </li>
+                        <li>
+                            <span>High School</span
+                            ><small>Henry M. Jackson High School</small
+                            ><small>Jan. 2013 - Jun. 2015</small>
+                        </li>
+                    </ul>
+                </div>
+                <div class="skills-prog"></div>
+                <!--
     <div class="skills-prog">
       <h3><i class="fas fa-code"></i>Programming Skills</h3>
       <ul>
@@ -113,109 +184,81 @@
       </ul>
     </div>
     -->
-    <div class="skills-soft">
-      <h3><i class="fas fa-bezier-curve"></i>Software Skills</h3>
-      <ul>
-        <li data-percent="90">
-          <svg viewbox="0 0 100 100">
-            <circle cx="50" cy="50" r="45"></circle>
-            <circle class="cbar" cx="50" cy="50" r="45"></circle>
-          </svg><span>Illustrator</span><small></small>
-        </li>
-        <li data-percent="75">
-          <svg viewbox="0 0 100 100">
-            <circle cx="50" cy="50" r="45"></circle>
-            <circle class="cbar" cx="50" cy="50" r="45"></circle>
-          </svg><span>Photoshop</span><small></small>
-        </li>
-        <li data-percent="85">
-          <svg viewbox="0 0 100 100">
-            <circle cx="50" cy="50" r="45"></circle>
-            <circle class="cbar" cx="50" cy="50" r="45"></circle>
-          </svg><span>InDesign</span><small></small>
-        </li>
-        <li data-percent="65">
-          <svg viewbox="0 0 100 100">
-            <circle cx="50" cy="50" r="45"></circle>
-            <circle class="cbar" cx="50" cy="50" r="45"></circle>
-          </svg><span>Dreamweaver</span><small></small>
-        </li>
-      </ul>
-    </div>
-    <div class="interests">
-      <h3><i class="fas fa-star"></i>Interests</h3>
-      <div class="interests-items">
-        <div class="art"><i class="fas fa-palette"></i><span>Art</span></div>
-        <div class="art"><i class="fas fa-book"></i><span>Books</span></div>
-        <div class="movies"><i class="fas fa-film"></i><span>Movies</span></div>
-        <div class="music"><i class="fas fa-headphones"></i><span>Music</span></div>
-        <div class="games"><i class="fas fa-gamepad"></i><span>Games</span></div>
-      </div>
-    </div>
-  </div>
-</div>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js'></script>
-  <script src="https://d3js.org/d3.v4.min.js"></script>
-  <script src="js/index.js"></script>
+                <div class="skills-soft">
+                    <h3><i class="fas fa-bezier-curve"></i>Software Skills</h3>
+                    <ul>
+                        <li data-percent="90">
+                            <svg viewbox="0 0 100 100">
+                                <circle cx="50" cy="50" r="45"></circle>
+                                <circle
+                                    class="cbar"
+                                    cx="50"
+                                    cy="50"
+                                    r="45"
+                                ></circle></svg
+                            ><span>Illustrator</span><small></small>
+                        </li>
+                        <li data-percent="75">
+                            <svg viewbox="0 0 100 100">
+                                <circle cx="50" cy="50" r="45"></circle>
+                                <circle
+                                    class="cbar"
+                                    cx="50"
+                                    cy="50"
+                                    r="45"
+                                ></circle></svg
+                            ><span>Photoshop</span><small></small>
+                        </li>
+                        <li data-percent="85">
+                            <svg viewbox="0 0 100 100">
+                                <circle cx="50" cy="50" r="45"></circle>
+                                <circle
+                                    class="cbar"
+                                    cx="50"
+                                    cy="50"
+                                    r="45"
+                                ></circle></svg
+                            ><span>InDesign</span><small></small>
+                        </li>
+                        <li data-percent="65">
+                            <svg viewbox="0 0 100 100">
+                                <circle cx="50" cy="50" r="45"></circle>
+                                <circle
+                                    class="cbar"
+                                    cx="50"
+                                    cy="50"
+                                    r="45"
+                                ></circle></svg
+                            ><span>Dreamweaver</span><small></small>
+                        </li>
+                    </ul>
+                </div>
+                <div class="interests">
+                    <h3><i class="fas fa-star"></i>Interests</h3>
+                    <div class="interests-items">
+                        <div class="art">
+                            <i class="fas fa-palette"></i><span>Art</span>
+                        </div>
+                        <div class="art">
+                            <i class="fas fa-book"></i><span>Books</span>
+                        </div>
+                        <div class="movies">
+                            <i class="fas fa-film"></i><span>Movies</span>
+                        </div>
+                        <div class="music">
+                            <i class="fas fa-headphones"></i><span>Music</span>
+                        </div>
+                        <div class="games">
+                            <i class="fas fa-gamepad"></i><span>Games</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+        <script src="https://d3js.org/d3.v4.min.js"></script>
+        <script src="js/index.js"></script>
 
-  <script>
-
-
-  var url_string = window.location.href
-  var url_param = new URL(url_string);
-  var idEtu = url_param.searchParams.get("id");
-
-  var arrVal = {"pas bon":50,"trop fort":60,"mauvais":5,"génie":100,"médiocre":10,"connais pas":0};
-  var url = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vQGKzjziYeDXNA_OHNyAOUY6HT9cowUTHrbR8vH1OiHyDA_oTDOqPp_AEiHBZfkB-Ca8Ia9G-AUoKTH/pub?gid=253888036&single=true&output=csv';
-	d3.csv(url, function(data) {
-    console.log(data);
-    //récupère le premier enregistrement
-    //var d = data[0];
-    //récupère l'enregistrement passé en get
-    var d = idEtu ? data[idEtu] : data[0];
-        
-    //met à jour le nom
-    d3.select('#dummybodyid > div.resume > div.base > div.profile > div.info > h1')
-      .html(d['Prénom']+" "+d.Nom);
-    //met à jour les compétences informatiques
-    var comp = d3.select('.skills-prog');
-    //ajout du titre
-    comp.append('h3').html("<i class='fas fa-code'></i>Langages informatiques");
-    //ajout des compétences
-    var ul = comp.append('ul');
-    //selectionner les propriétés de : Vos compétences : langage informatique
-    var tc = [];
-    var c = 'Vos compétences : langage informatique';
-    for (let p in d) {
-      if(p.includes(c)){
-        let deb = p.indexOf('[');
-        let fin = p.indexOf(']');
-        let val = arrVal[d[p]];
-        if(val>0)
-          tc.push({'lbl':p.substring(deb+1,fin),'val':val});
-      }
-    }
-    console.log(tc);
-    var li = ul.selectAll('li').data(tc).enter().append('li')
-      .attr("data-percent",function(v){
-        return v.val;
-      });
-    li.append('span').html(function(c){
-      return c.lbl;
-    });
-    li.append('div').attr('class',"skills-bar")
-      .append('div').attr('class',"bar");
-
-    setAnimSkillProg();
-
-  });
-  console.log('toto');
-
-  </script>
-
-
-
-
-</body>
-
+        <script src="js/dynamic.js"></script>
+    </body>
 </html>
